refactoring and fixing warnings