@@ -6,6 +6,7 @@ import com.frandm.studytracker.core.NotificationManager;
 import com.frandm.studytracker.core.Logger;
 import com.frandm.studytracker.controllers.PomodoroController;
 import javafx.application.Platform;
+import javafx.event.Event;
 import javafx.geometry.Insets;
 import javafx.geometry.Pos;
 import javafx.scene.Node;
@@ -59,12 +60,12 @@ public class DailyTab extends VBox {
         this.refreshAction = refreshAction != null ? refreshAction : () -> {};
     }
 
-    public void openCreateScheduledSession(double screenX, double screenY) {
-        showScheduledSessionPopup(new LinkedHashMap<>(), screenX, screenY);
+    public void openCreateScheduledSession() {
+        showScheduledSessionPopup(new LinkedHashMap<>());
     }
 
-    public void openCreateDeadline(double screenX, double screenY) {
-        showDeadlinePopup(new LinkedHashMap<>(), screenX, screenY);
+    public void openCreateDeadline() {
+        showDeadlinePopup(new LinkedHashMap<>());
     }
 
     public void openCreateTodo() {
@@ -92,24 +93,11 @@ public class DailyTab extends VBox {
         ensureIndependentEmptyStates();
 
         content.getChildren().addAll(
-                createHeader("Notes"), createNotesPreviewNode(),
+                createHeader(), createNotesPreviewNode(),
                 createReadOnlySectionHeader(lblDeadlinesHeader), deadlinesContainer,
                 createReadOnlySectionHeader(lblTodoHeader), todoListContainer,
                 createReadOnlySectionHeader(new Label("Scheduled Sessions")), dayEventsContainer
         );
-    }
-
-    private HBox createSectionHeader(Label titleLabel, javafx.event.EventHandler<javafx.event.ActionEvent> onAdd) {
-        titleLabel.getStyleClass().add("section-header");
-        Button btnAdd = new Button();
-        btnAdd.setGraphic(new FontIcon("mdi2p-plus"));
-        btnAdd.getStyleClass().addAll(Styles.BUTTON_CIRCLE, Styles.FLAT);
-        btnAdd.setOnAction(onAdd);
-        Region spacer = new Region();
-        HBox.setHgrow(spacer, Priority.ALWAYS);
-        HBox header = new HBox(10, titleLabel, spacer, btnAdd);
-        header.setAlignment(Pos.CENTER_LEFT);
-        return header;
     }
 
     private HBox createReadOnlySectionHeader(Label titleLabel) {
@@ -315,7 +303,7 @@ public class DailyTab extends VBox {
         overlayCard.setPrefWidth(900);
         overlayCard.setMaxWidth(960);
         overlayCard.setMaxHeight(Region.USE_PREF_SIZE);
-        overlayCard.setOnMouseClicked(e -> e.consume());
+        overlayCard.setOnMouseClicked(Event::consume);
 
         Button closeButton = new Button();
         closeButton.setGraphic(new FontIcon("mdi2c-close"));
@@ -455,19 +443,6 @@ public class DailyTab extends VBox {
         return row;
     }
 
-    private void checkEmptyDay(VBox content) {
-        boolean hasData = !deadlinesContainer.getChildren().isEmpty() ||
-                !dayEventsContainer.getChildren().isEmpty() ||
-                !todoListContainer.getChildren().isEmpty();
-
-        if (!hasData) {
-            content.getChildren().clear();
-            Label lblEmpty = new Label("No plan for this day yet.");
-            lblEmpty.getStyleClass().addAll(Styles.TEXT_MUTED, "daily-empty-day-label");
-            content.getChildren().add(lblEmpty);
-        }
-    }
-
     private void applyTodoCompletedState(HBox row, FontIcon completedIcon, FontIcon todoIcon, VBox info, boolean completed) {
         completedIcon.setIconLiteral(completed ? "mdi2c-check-circle" : "mdi2c-checkbox-blank-circle-outline");
         row.setOpacity(completed ? 0.75 : 1.0);
@@ -484,33 +459,6 @@ public class DailyTab extends VBox {
             todoListContainer.getChildren().add(newRow);
         }
         updateTodoHeaderCount();
-    }
-
-    public void updateHeaderDate(LocalDate date) {
-        this.currentDate = date;
-        noteArea.setText("");
-        updateNotesPreview();
-        deadlinesContainer.getChildren().clear();
-        dayEventsContainer.getChildren().clear();
-        todoListContainer.getChildren().clear();
-        closeOverlay();
-        rebuildUI();
-
-        new Thread(() -> {
-            try {
-                String note = ApiClient.getNoteByDate(date);
-                List<Map<String, Object>> todos = ApiClient.getTodosByDate(date);
-                Platform.runLater(() -> {
-                    noteArea.setText(note);
-                    updateNotesPreview();
-                    if (todos != null) {
-                        todos.forEach(t -> todoListContainer.getChildren().add(createTodoRow(t)));
-                    }
-                    ensureTodoPlaceholder();
-                    updateTodoHeaderCount();
-                });
-            } catch (Exception e) { Logger.error(e); }
-        }, "daily-data-loader").start();
     }
 
     public void updateDayContent(LocalDate date,
@@ -548,29 +496,6 @@ public class DailyTab extends VBox {
 
         fill(deadlinesContainer, sortedDeadlines, "No deadlines", this::createDeadlineRow);
         fill(dayEventsContainer, sortedScheduled, "No scheduled sessions", this::createEventRow);
-        updateDeadlineHeaderCount();
-    }
-
-    public void refreshData(List<Map<String, Object>> scheduled, List<Map<String, Object>> deadlines) {
-        List<Map<String, Object>> sortedDeadlines = deadlines == null ? List.of() : deadlines.stream()
-            .sorted(Comparator
-                    .comparing((Map<String, Object> item) -> !Boolean.TRUE.equals(item.get("allDay")))
-                    .thenComparing(item -> {
-                        LocalDateTime due = extractDeadlineDate(item);
-                        return due != null ? due : LocalDateTime.MAX;
-                    }))
-            .collect(Collectors.toList());
-
-        List<Map<String, Object>> sortedScheduled = scheduled == null ? List.of() : scheduled.stream()
-            .sorted(Comparator.comparing(item -> {
-                LocalDateTime start = extractScheduledStart(item);
-                return start != null ? start : LocalDateTime.MAX;
-            }))
-            .collect(Collectors.toList());
-
-        fill(deadlinesContainer, sortedDeadlines, "No deadlines", this::createDeadlineRow);
-        fill(dayEventsContainer, sortedScheduled, "No scheduled sessions", this::createEventRow);
-
         updateDeadlineHeaderCount();
     }
 
@@ -663,7 +588,7 @@ public class DailyTab extends VBox {
         FontIcon deadlineIcon = new FontIcon("mdi2a-alarm");
         row.getChildren().addAll(completedButton, deadlineIcon, info, spacer, badges);
         row.setOnMouseClicked(e -> {
-            showDeadlinePopup(data, e.getScreenX(), e.getScreenY());
+            showDeadlinePopup(data);
             e.consume();
         });
         row.setCursor(javafx.scene.Cursor.HAND);
@@ -701,7 +626,7 @@ public class DailyTab extends VBox {
         info.getChildren().addAll(title, time);
         row.getChildren().add(info);
         row.setOnMouseClicked(e -> {
-            showScheduledSessionPopup(data, e.getScreenX(), e.getScreenY());
+            showScheduledSessionPopup(data);
             e.consume();
         });
         row.setCursor(javafx.scene.Cursor.HAND);
@@ -724,13 +649,13 @@ public class DailyTab extends VBox {
         return label;
     }
 
-    private Label createHeader(String title) {
-        Label header = new Label(title);
+    private Label createHeader() {
+        Label header = new Label("Notes");
         header.getStyleClass().add("section-header");
         return header;
     }
 
-    private void showScheduledSessionPopup(Map<String, Object> data, double screenX, double screenY) {
+    private void showScheduledSessionPopup(Map<String, Object> data) {
         closeActivePopup();
         boolean isEdit = data.get("id") != null;
 
@@ -833,10 +758,10 @@ public class DailyTab extends VBox {
             root.getChildren().add(delete);
         }
 
-        showPopup(popup, root, screenX, screenY);
+        showPopup(popup, root);
     }
 
-    private void showDeadlinePopup(Map<String, Object> data, double screenX, double screenY) {
+    private void showDeadlinePopup(Map<String, Object> data) {
         closeActivePopup();
         boolean isEdit = data.get("id") != null;
 
@@ -956,7 +881,7 @@ public class DailyTab extends VBox {
             root.getChildren().add(delete);
         }
 
-        showPopup(popup, root, screenX, screenY);
+        showPopup(popup, root);
     }
 
     private Popup buildPopup() {
@@ -972,7 +897,7 @@ public class DailyTab extends VBox {
     private VBox popupRoot() {
         VBox root = new VBox(12);
         root.getStyleClass().addAll("calendar-popup", pomodoroController.getCurrentTheme());
-        root.getStylesheets().add(getClass().getResource("/com/frandm/studytracker/css/styles.css").toExternalForm());
+        root.getStylesheets().add(Objects.requireNonNull(getClass().getResource("/com/frandm/studytracker/css/styles.css")).toExternalForm());
         root.setPadding(new Insets(20));
         root.setPrefWidth(420);
         return root;
@@ -984,7 +909,7 @@ public class DailyTab extends VBox {
         return label;
     }
 
-    private void showPopup(Popup popup, VBox root, double screenX, double screenY) {
+    private void showPopup(Popup popup, VBox root) {
         popup.getContent().add(root);
         root.applyCss();
         root.layout();
@@ -1067,7 +992,7 @@ public class DailyTab extends VBox {
         List<Map<String, Object>> currentDeadlines = deadlinesContainer.getChildren().stream()
                 .filter(node -> node.getProperties().containsKey("data"))
                 .map(node -> (Map<String, Object>) node.getProperties().get("data"))
-                .collect(Collectors.toList());
+                .toList();
 
         long total = currentDeadlines.size();
         long completed = currentDeadlines.stream()
